# Hikari

./: .editorconfig  .gitattributes  .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: CLAUDE.md  settings.json
.claude/agents/: accessibility-master.md  ai-ml-master.md  analytics-master.md  backend-api-master.md  brand-communication-master.md  build-deploy-test-master.md  code-quality-master.md  code-review-master.md  codebase-explorer-master.md  compliance-auditor-master.md  context-engineer-master.md  context-guardian-master.md  cost-optimizer-master.md  cross-model-reviewer-master.md  customer-success-master.md  database-master.md  debug-investigator-master.md  deep-research-master.md  dependency-master.md  desktop-app-master.md  documentation-generator-master.md  elixir-phoenix-master.md  email-notification-master.md  financial-planning-master.md  frontend-master.md  gaming-esport-master.md  geo-master.md  github-ci-master.md  holistic-productivity-master.md  i18n-master.md  incident-response-master.md  infrastructure-master.md  legal-compliance-master.md  marketing-content-master.md  mobile-master.md  monitoring-master.md  packaging-distribution-master.md  payment-master.md  pedagogy-master.md  performance-master.md  (+16 more)
.claude/hooks/: README.md
.claude/hooks/deploy/: a11y-checks.py  axe-violations.py  maintenance-pages-check.py  safari-test-required.py  smoke-test-required.py
.claude/hooks/guards/: bash-guard.py  post-commit-push-check.py  post-write-guard.py  pre-code-veille-check.py  pre-deploy-registry-check.py  pre-deploy-vault-check.py  pre-infra-drift-check.py  pre-push-drift-check.py  pre-session-end-readme-check.py  write-guard.py
.claude/hooks/lego/: i18n-no-hardcode.py  shared-types-only.py  shinkofa-ui-inventory.py
.claude/hooks/lib/: brief_builder.py  common.py  drift.py  friction.py  session_state.py  transcript_reader.py
.claude/hooks/lifecycle/: clock-not-fatigue-inject.py  docs-progress-update.py  hook-blocks-report.py  hook-blocks-stats.py  notes-jay-markers.py  obsidian-mandatory-read.py  post-compact-recheck.py  pre-compact-handoff.py  session-end-metrics.py  session-start-mandatory-read.py  session-start-obsidian.py  simple-language-inject.py  state-cleanup.py  time-awareness.py
.claude/hooks/memory/: memory-autocommit.py  rules-vs-memory.py
.claude/hooks/quality/: anti-quick-fix.py  atomic-commit-check.py  clock-not-fatigue-check.py  function-complexity-check.py  logs-first.py  reformulate-gate.py  simple-language-check.py  tdg-test-first.py  utf8-french-check.py  veille-extended.py
.claude/hooks/tests/: test_anti_quick_fix.py  test_bash_guard.py  test_canonical_project_name.py  test_clock_not_fatigue_check.py  test_common_deploy.py  test_d1_post_commit_push.py  test_d2_vault_check.py  test_d3_registry_check.py  test_d4_readme_check.py  test_d5_extended_secrets.py  test_drift.py  test_friction.py  test_function_complexity_check.py  test_hook_blocks_report.py  test_hook_blocks_stats.py  test_memory_autocommit.py  test_pre_code_veille_check.py  test_pre_infra_drift_check.py  test_pre_push_drift_check.py  test_reformulate_gate.py  test_simple_language_check.py
.claude/hooks/time-tracker/: _log.py  comparator-tool.py  estimation-capture.py  realtime-tracker.py  session-report-stats.py
.claude/rules/: 5S.md  Autonomous-Session.md  Confidentiality.md  Conventions.md  Dignity.md  Honesty.md  Identity.md  Interpretation-Protocol.md  Memory.md  Monozukuri.md  QE-V2-Retroactive.md  Quality.md  Rule-Format.md  Strategic-Context.md  Workflows.md
.claude/skills/commit/: SKILL.md
.claude/skills/concevoir/: SKILL.md  presentation-template.html
.claude/skills/deploy/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/extract-lego/: SKILL.md
.claude/skills/pre-rag-audit/: SKILL.md
docs/: CDC.md  Mockup-Hikari-Stream.html  PET.md  README.md  Veille-Technique.md  Vision-Cadrage.md
docs/Sessions/: Session-2026-07-18-001.md  Session-2026-07-19-001.md  Session-2026-07-19-002.md  Session-2026-07-21-001.md  Session-2026-07-23-001.md  run-2026-07-18-0127.md  run-2026-07-18-2220.md  run-2026-07-18-2346.md
docs/legacy-ancien-repo/: AUDIT-COMPLETE.md  Architecture-Vision.md  Audit-Complet-2026-02-26.md  Audit-Factuel-2026-02-16.md  CDC-Hikari-Stream.md  CHANGELOG-SESSION.md  Execution-Plan-2026-03-06.md  Plan-Implementation-Hikari-Stream.md  Reprise-Hikari-Stream.md  SESSION-2026-02-09-Multi-Webcam-Background.md  SESSION-SUMMARY.md  Session-Plan-2026-02-27.md  Sprint-Plan.md
docs/refs-concurrence/: Analyse-Streamerbot-TouchPortal.md
spikes/b0.0-libobs/: .gitignore  Cargo.toml  README.md  measure.ps1
spikes/b0.0-libobs/crates/controller/: Cargo.toml
spikes/b0.0-libobs/crates/controller/src/: main.rs
spikes/b0.0-libobs/crates/engine/: Cargo.toml
spikes/b0.0-libobs/crates/engine/src/: main.rs
spikes/b0.0-libobs/mesures/: .gitkeep  epreuve-a-diffusion.md  epreuve-b-survie.md  epreuve-c-surcout.md
spikes/b0.2-double-encodage/: Cargo.toml  README.md
spikes/b0.2-double-encodage/crates/engine/: Cargo.toml
spikes/b0.2-double-encodage/crates/engine/src/: main.rs
spikes/b0.2-double-encodage/mesures/: verdict.md
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/automation/: Cargo.toml
src-tauri/crates/automation/src/: engine.rs  execution.rs  lib.rs  model.rs  triggers.rs
src-tauri/crates/automation/tests/: engine.rs  proptest_engine.rs
src-tauri/crates/engine/: Cargo.toml
src-tauri/crates/engine/src/: camera.rs  main.rs  multistream.rs  stream.rs
src-tauri/crates/protocol/: Cargo.toml
src-tauri/crates/protocol/src/: lib.rs
src-tauri/crates/protocol/tests/: camera_transform.rs  multistream.rs  roundtrip.rs
src-tauri/examples/: youtube_manual_auth.rs
src-tauri/src/: camera_bridge.rs  commands.rs  deck_bridge.rs  engine_bridge.rs  engine_lifecycle.rs  lib.rs  main.rs  preflight.rs  preflight_bridge.rs  preview_bridge.rs  protocol.rs
src-tauri/src/accounts/: mod.rs  oauth.rs  twitch.rs  vault.rs  youtube.rs
(+34 files in other folders)
