[workspace]
members = ["crates/protocol", "crates/engine"]
resolver = "2"

# The engine is a SEPARATE binary (`hikari-engine`), launched by path as a child
# process (ADR-013 — fault isolation). It is NEVER linked into the Tauri app.
# `hikari-protocol` holds the JSON-line wire types shared by both sides (ADR-011),
# with zero libobs/tauri dependency so it stays pure and headless-testable.
[workspace.dependencies]
hikari-protocol = { path = "crates/protocol" }
libobs-wrapper = "9.0.4"
libobs-simple = "8.0.1"
anyhow = "1"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
winit = "0.30"
keyring = { version = "4.1.5", features = ["windows-native-keyring-store"] }
rand = "0.9.5"
sha2 = "0.11.0"
base64 = "0.22.1"
twitch_oauth2 = { version = "0.17.1", features = ["client", "reqwest"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.4", features = ["json", "form"] }
tiny_http = "0.12.0"
urlencoding = "2.1.3"

[package]
name = "hikari"
version = "0.1.0"
description = "Hikari — cockpit stream open-source"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hikari_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
hikari-protocol = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
windows = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
twitch_oauth2 = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tiny_http = { workspace = true }
urlencoding = { workspace = true }
